[package]
name = "petro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.9", features = ["macros"] }

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.5.0", features = ["postgres", "bb8", "async-connection-wrapper"] }
diesel-derive-enum = { version = "2.1" , features = ["postgres"] }
diesel-derive-newtype = "2.1"
diesel_migrations = { version = "2.2", features = ["postgres"] }

dotenvy = "0.15.7"

futures = "0.3"
futures-util = "0.3"

native-tls = "0.2"

postgres-native-tls = "0.5"
# postgres-types = { version = "0.2", features = ["derive" ] }

secrecy = { version = "0.8", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }

tracing-actix-web = { version = "0.7" }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-wasm = { version = "0.2" }

uuid = { version = "1.10", features = ["serde", "v4"] }
